File: components/nexus-scheduling/src/main/java/org/sonatype/nexus/scheduling/spi/package-info.java